--- a/basics.ipynb
+++ b/basics.ipynb
@@ -17,6 +17,48 @@
    "source": [
     "print(\"Hello, World!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f154a168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rag = range(1,23)\n",
+    "print(list(rag))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3110f120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1725\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [123, 234, 345, 456, 567]\n",
+    "total = 0\n",
+    "\n",
+    "for i in items:\n",
+    "    total += i\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
